--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -7,7 +7,7 @@
 
 \section{Descripción del hardware del sistema}
 
-    El sistema de supervisión se implementa sobre una prueba de concepto desarrollada para dar fe de la certeza en cuanto al análisis teórico desarrollado en todo el capítulo primero.
+    El sistema de supervisión se implementa sobre una prueba de concepto desarrollada para dar fe en cuanto al análisis teórico desarrollado en todo el capítulo primero.
 
     ...
 
