--- a/capitulos/carátula2.tex
+++ b/capitulos/carátula2.tex
@@ -27,7 +27,7 @@
     \vspace{0.5cm}
 
     \textbf{\large Tutor\\
-    M.Sc. Angel Antonio Ravelo Batista}
+    Ms.C. Angel Antonio Ravelo Batista}
 
     \vfill
     \textbf{\large Noviembre, 2022}   
