--- a/capitulos/resumen.tex
+++ b/capitulos/resumen.tex
@@ -7,6 +7,6 @@
 \newline
 
 El presente Trabajo de Diploma trata el proceso de diseño e instalación de un sistema de monitoreo y visualización de las variables para el control del estado de conservación de las piezas pertenecientes a la Colección de Arte y Arqueología de Francisco Prat Puig ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba. Se tratan generalidades sobre la aplicación del Iot en museos a nivel internacional y en Cuba. Se realiza una caracterización de los sensores a emplear para el control, así como el montaje de un sistema de seguridad.
-En concordancia con las características del lugar se efectúa el montaje de dicho sistema facilitando el control del estado de las piezas y propiciándole a los especialistas del centro los datos necesarios para la toma de decisiones ante futuros eventos de. Este sistema puede ser empleado en posteriores proyectos relacionados con la supervisión de objetos, facilitando la visualización del estado de los mismos y la alerta temprana en caso de posibles afectaciones.
+En concordancia con las características del lugar se efectúa el montaje de dicho sistema facilitando el control del estado de las piezas y propiciándole a los especialistas del centro los datos necesarios para la toma de decisiones ante futuros eventos de. Este sistema puede ser empleado en posteriores proyectos relacionados con la supervisión de objetos, facilitando la visualización del estado de los mismos y la alerta temprana en caso de posibles afectaciones.\\
 
-\textbf{Palabras Claves: } 
+\textbf{Palabras Claves: } IoT, Sensores, 
